--- a/src/Header.css
+++ b/src/Header.css
@@ -1,41 +1,59 @@
 .Header {
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    color: white;
     width: 100%;
     height: 7vh;
-    min-height: 50px;
+    min-height: 45px;
     background-image: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
-    overflow: hidden;
-    display: flex;
 }
 
 .Header img {
-    margin: 1vh 1vw 0vh 1vw;
+    margin: 1vh 1.5vw 0vh 1vw;
     cursor: pointer;
     height: auto;
-    min-width: 250px;
-    max-width: 3vw;
-    object-fit: contain;
+    max-height: 45px;
+    min-width: 215px;
+    max-width: 20vw;
 }
 
-.Header button {
-    padding: 1vh 1vw 1vh 1vw;
-    color: white;
-    font-size: calc(1vw + 9px);
-    background-color: Transparent;
-    border: none;
+.Header div{
+    height: 6vh;
+    min-height: 43px;
+    padding: 0vh 1vw 0vh 1vw;
     cursor: pointer;
-    overflow: hidden;
-    outline:none;
-    font-weight: bold;
 }
 
-.Header button:last-child{
+.Header div p {
+    font-size: calc(.9vw + 11.5px);
+    font-weight: bold;
+    line-height: 0px;
+}
+
+.Header div:hover{
+    color: white;
+    background: rgba(35, 35, 35, .4);
+    border-bottom-color: #DDC5F9;
+    border-bottom-width: 6px;
+    border-bottom-style: groove;
+    transition: color .5s;
+    -webkit-transition: color .5s;
+}
+
+.Header div:last-child{
     margin-left: auto;
 }
 
-.Header button:hover{
+.active {
+    color: white;
+    background: rgba(25, 25, 25, .5);
+    border-bottom-color: #DDC5F9;
+    border-bottom-width: 6px;
+    border-bottom-style: groove;
+}
+
+.active:hover{
     color: #ccc;
     transition: color .5s;
     -webkit-transition: color .5s;
-
 }
