--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
+  margin: auto;
+  width: 80%;
+  border: 3px solid green;
+  padding: 1vh 1vw;
+}
+
+html {
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
