--- a/src/UI Components/About/About.css
+++ b/src/UI Components/About/About.css
@@ -1,4 +1,25 @@
-.Body {
-    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-  }
-  
+.About{
+	display: flex;
+	justify-content: space-around;
+}
+.Left{
+	margin: 0vh 4vw;
+}
+
+.Left h3{
+	text-align: center;
+	border-bottom-style: groove;
+	width: 50%;
+	transform: translateX(50%);
+}
+
+.Left p a{
+	color: #98700D;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.Left p a:hover{
+	color: #C28E0E;
+	text-decoration: underline;
+}
