--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,22 @@
 html {
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
+
+.Row{
+	display: flex;
+	justify-content: space-between;
+}
+
+.rowImages{
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.lrgImg{width: 110vw;}
+.medImg{width: 100vw;}
+.smlImg{width: 90vw;}
+
+.lrgImg p,.medImg p,.smlImg p{
+  font-size: calc(.9vw + 7.5px);
+	margin: 0;
+}
