--- a/src/UI Components/Navbar.css
+++ b/src/UI Components/Navbar.css
@@ -8,12 +8,10 @@
 }
 
 .Navbar img {
-    margin: 1vh 1.5vw 0vh 1vw;
+    margin: 1.5vh 2vw 0vh 0vw;
     cursor: pointer;
     height: auto;
-    max-height: 50px;
-    min-width: 215px;
-    max-width: 20vw;
+    width: 30vw;
 }
 
 .Navbar a {
@@ -104,4 +102,15 @@
 .down {
     transition: ease .7s;
     transform: translateY(49px);
+}
+
+@media only screen and (max-width: 700px) {
+    a{font-size: calc(1vw + 10px)!important;}
+    
+    .Slider{width:85%!important;}
+
+    .Navbar img {
+        margin: .5vh 0vw 0vh 1vw !important;
+        width: 40vw !important;
+    }
 }
