--- a/src/UI Components/SubHeader/Home.css
+++ b/src/UI Components/SubHeader/Home.css
@@ -1,41 +1,50 @@
-.Row{
-	display: flex;
-	justify-content: space-between;
-}
+@media only screen and (max-width: 700px) {
+	.Row{ display: inline !important;}
 
-.rowImages{
-	display: flex;
-	justify-content: space-evenly;
+	.lrgImg,.medImg,.smlImg{ 
+		width: 85vw !important;
+		transform: translateX(7%);
+	}
+
+	.Home p, .Home a{	font-size: calc(1vw + 10px) !important; text-align: center;}
+	h5{font-size: calc(1vw + 11px) !important;}
+	.Home h3{font-size: calc(1vw + 20px) !important;}
 }
 
 .rowImages img{
 	max-width: 8%;
 }
 
-.Content h3{
+.Home h3{
 	text-align: center; 
 	border-bottom-style: groove;
 	font-size: calc(1vw + 20px);
 	transform: translateX(50%);
 }
 
-h5{
+.Home h5{
 	text-align: center;
 	font-size: calc(1vw + 7px);
 	line-height: 0;
 }
 
-.Content p{
+.Home p{
 	font-size: calc(.9vw + 7.5px);
+	margin: 5vh 5vw;
 }
 
-.Content p a{
+.Home i{
+	margin: 5vh 5vw;
+}
+
+.Home p a{
 	color: #98700D;
 	text-decoration: none;
 	cursor: pointer;
+	font-size: calc(.9vw + 7.5px);
 }
 
-.Content p a:hover{
+.Home p a:hover{
 	color: #C28E0E;
 	text-decoration: underline;
 }
