--- a/src/UI Components/Minecraft.css
+++ b/src/UI Components/Minecraft.css
@@ -1,3 +1,21 @@
+@media only screen and (max-width: 700px) {
+	.Row{ display: inline !important;}
+
+	.minecraft p, .minecraft a{	font-size: calc(1vw + 10px) !important; text-align: center;}
+	.minecraft h5{font-size: calc(1vw + 11px) !important;}
+	.minecraft h3{font-size: calc(1vw + 20px) !important;}
+
+    .minecraft .mineImg{
+        width: 70vw !important;
+        transform: translateX(20%);
+    }
+
+    .minecraft .Row #left,.minecraft .Row #right, .minecraft .Row #center{
+        font-size: calc(1vw + 10px) !important;
+        margin: 5vh 5vw !important;
+    }
+}
+
 .minecraft .content{
     display: flex;
     justify-content: space-between;
@@ -16,18 +34,14 @@
     text-align: center;
 }
 
-.minecraft .mineImg{
-    width: 35vw;
+.minecraft h3{
+	text-align: center;
+	border-bottom-style: groove;
+	width: 50%;
+	transform: translateX(50%);
+	font-size: calc(1vw + 20px);
 }
 
-@media only screen and (max-width: 700px) {
-    .minecraft .mineImg{
-        width: 70vw !important;
-        transform: translateX(20%);
-    }
-
-    .minecraft .Row #left,.minecraft .Row #right, .minecraft .Row #center{
-        font-size: calc(1vw + 10px) !important;
-        margin: 5vh 5vw;
-    }
+.minecraft .mineImg{
+    width: 35vw;
 }
