--- a/src/UI Components/SubHeader/Home.css
+++ b/src/UI Components/SubHeader/Home.css
@@ -7,7 +7,7 @@
 	}
 
 	.Home p, .Home a{	font-size: calc(1vw + 10px) !important; text-align: center;}
-	h5{font-size: calc(1vw + 11px) !important;}
+	.Home h5{font-size: calc(1vw + 11px) !important;}
 	.Home h3{font-size: calc(1vw + 20px) !important;}
 }
 
@@ -20,11 +20,12 @@
 	border-bottom-style: groove;
 	font-size: calc(1vw + 20px);
 	transform: translateX(50%);
+	width: 50%;
 }
 
 .Home h5{
 	text-align: center;
-	font-size: calc(1vw + 7px);
+	font-size: calc(1vw + 11px);
 	line-height: 0;
 }
 
