--- a/src/UI Components/SubHeader/Skill.css
+++ b/src/UI Components/SubHeader/Skill.css
@@ -1,3 +1,16 @@
+@media only screen and (max-width: 700px) {
+	.Row{ display: inline !important;}
+
+	.lrgImg,.medImg,.smlImg{ 
+		width: 85vw !important;
+		transform: translateX(7%);
+	}
+
+	.Skill p, .Skill a{	font-size: calc(1vw + 10px) !important; text-align: center;}
+	.Skill h5{font-size: calc(1vw + 11px) !important;}
+	.Skill h3{font-size: calc(1vw + 20px) !important;}
+}
+
 .rowImages{
 	display: flex;
 	justify-content: space-evenly;
@@ -11,12 +24,18 @@
     text-align: center;
 }
 
-h3{
+.Skill h3{
 	text-align: center;
 	border-bottom-style: groove;
 	width: 50%;
 	transform: translateX(50%);
 	font-size: calc(1vw + 20px);
+}
+
+.Skill h5{
+	text-align: center;
+	font-size: calc(1vw + 7px);
+	line-height: 0;
 }
 
 .Skill p{
