--- a/src/UI Components/Navbar.css
+++ b/src/UI Components/Navbar.css
@@ -6,18 +6,20 @@
     
     .down {transform: translateY(49px) !important;}
     
-    a{font-size: calc(1vw + 10px)!important;}
+    a{font-size: calc(1vw + 9px)!important;}
     
-    .Slider{width:85%!important;}
+    .Slider{width:100%!important; transition: ease .7s !important;}
 
     .Navbar img {
         margin: .5vh 0vw 0vh 1vw !important;
         width: 40vw !important;
     }
 
-    #home{
+    #home, #skill{
         width: 0% !important;
         opacity: 0;
+        padding: 0;
+        margin: 0;
         z-index: -99 !important;
         cursor: default !important;
     }
