--- a/src/UI Components/FramedImage.css
+++ b/src/UI Components/FramedImage.css
@@ -10,11 +10,11 @@
 }
 
 .Frame p{
-    margin: 0px;
-    color: white;
-    font-size: calc(.9vw + 7.5px);
-    text-align: center;
-    line-height: 1.5;
+    margin: 0px !important;
+    color: white !important;
+    font-size: calc(.9vw + 7.5px) !important;
+    text-align: center !important;
+    line-height: 1.5 !important;
 }
 
 .clickable{
