--- a/src/UI Components/ImageSlides.css
+++ b/src/UI Components/ImageSlides.css
@@ -23,14 +23,26 @@
     position: absolute;
     cursor: pointer;
     top: 50%;
-    transform: rotateY(-50%);
-    width: 7%;
+    transform: translateY(-50%);
+    margin: 0 !important;
+    color: #65379B;
+    text-shadow: 0 0 5px #FFF;
 }  
 .imageInstance #btnL{ left: 5px; }
 .imageInstance #btnR{ right: 5px; }
 .imageInstance .NA{
     opacity: 0;
     z-index: -5;
+}
+
+.fullscreen{
+    cursor: zoom-in !important;
+    position: absolute;
+    right:5px;
+    bottom:5vh;
+    margin: 0px !important;
+    color: #65379B;
+    text-shadow: 0 0 5px #FFF;
 }
 
 #discription {
