Project page details and added ability to pass styles to ImageSlides

--- a/src/UI Components/ImageSlides.css
+++ b/src/UI Components/ImageSlides.css
@@ -31,12 +31,8 @@
     cursor: zoom-in !important;
     position: absolute;
     right:5px;
-    bottom:5vh;
+    bottom:35px;
     margin: 0px !important;
     color: #65379B;
     text-shadow: 0 0 5px #FFF;
-}
-
-#discription {
-    margin: 5vh 5vw;
 }
