--- a/src/UI Components/SubHeader/Project.css
+++ b/src/UI Components/SubHeader/Project.css
@@ -32,3 +32,10 @@
 .Project p{
 	margin: 2vh 3vw;
 }
+.linkContainer{
+	text-align: center;
+	margin-bottom: 10px;
+}
+.linkContainer p {
+	margin: 0;
+}
