--- a/src/App.css
+++ b/src/App.css
@@ -59,14 +59,14 @@ h5{	font-size: calc(.75vw + 10px);}
 h6{	font-size: calc(.75vw + 5px);}
 
 
-p a{
+a{
 	color: #98700D;
 	text-decoration: none;
 	cursor: pointer;
 	font-size: inherit;
 }
 
-p a:hover{
+a:hover{
 	color: #C28E0E;
 	text-decoration: underline;
 }
