--- a/src/UI Components/Navbar.css
+++ b/src/UI Components/Navbar.css
@@ -24,6 +24,7 @@
 
 .Navbar {
     display: flex;
+    align-items: center;
     width: 100%;
     height: 50px;
     background-image: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
@@ -34,7 +35,7 @@
 }
 
 .Navbar img {
-    margin: 1.5vh 2vw 0vh 0vw;
+    margin: 1.5vh 2vw 0vh 1vw;
     cursor: pointer;
     height: auto;
     width: 30vw;
@@ -82,6 +83,7 @@
 
 .Slider{
     display: flex;
+    align-items: center;
     flex-direction: row;
     color: white;
     height: 40px;
