--- a/src/UI Components/Navbar.css
+++ b/src/UI Components/Navbar.css
@@ -1,15 +1,15 @@
 @media only screen and (max-width: 700px) {
-    .up{ top:50px !important; transition: ease .5s !important; width: 100% !important;}
+    .up{ top:65px !important; transition: ease .5s !important; width: 100% !important;}
     
-    .down {top:50px !important; width: 100% !important;}
+    .down {top:65px !important; width: 100% !important;}
     
-    a{font-size: calc(1vw + 9px)!important;}
+    a{font-size: calc(1vw + 11px)!important;}
     
     .Slider{width:100%!important; transition: ease .5s !important;}
 
     .Navbar img {
-        margin: .5vh 0vw 0vh 1vw !important;
-        width: 40vw !important;
+        margin: 0vh 2vw 0vh 1vw !important;
+        width: calc(25vw + 15px) !important;
     }
 
     #home, #skill{
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 50px;
+    height: 65px;
     background-image: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
     transform: translateY(-40px);
     top: 40px;
@@ -35,10 +35,10 @@
 }
 
 .Navbar img {
-    margin: 1.5vh 2vw 0vh 1vw;
+    margin: 0vh 2vw 0vh 1vw;
     cursor: pointer;
     height: auto;
-    width: 30vw;
+    width: calc(20vw + 10px);
 }
 
 .Navbar a{
@@ -46,8 +46,8 @@
     font-weight: bold;
     color: white;
     text-decoration: none;
-    line-height: 50px;
-    height: 50px;
+    line-height: 65px;
+    height: 65px;
     padding: 0vh 1vw 0vh 1vw;
     cursor: pointer;
     list-style: none;
@@ -57,9 +57,9 @@
 .Navbar a:hover{
     color: white;
     background: rgba(35, 35, 35, .4);
-    border-bottom-color: #DDC5F9;
+    /* border-bottom-color: #DDC5F9;
     border-bottom-width: 6px;
-    border-bottom-style: groove;
+    border-bottom-style: groove; */
     transition: color .5s;
     -webkit-transition: color .5s;
 }
@@ -71,9 +71,9 @@
 .active {
     color: white;
     background: rgba(25, 25, 25, .5);
-    border-bottom-color: #DDC5F9;
+    /* border-bottom-color: #DDC5F9;
     border-bottom-width: 6px;
-    border-bottom-style: groove;
+    border-bottom-style: groove; */
 }
 
 .active:hover{
@@ -87,18 +87,18 @@
     align-items: center;
     flex-direction: row;
     color: white;
-    height: 40px;
+    height: 50px;
     background-image: linear-gradient(to right, #434343 0%, black 75%);
     opacity: .85;
 }
 
 .Slider a{
-    height: 40px;
+    height: 50px;
     padding: 0vh 1vw 0vh 1vw;
     cursor: pointer;
     font-size: calc(.8vw + 7.5px);
     font-weight: bold;
-    line-height: 40px;
+    line-height: 50px;
     color: white;
     text-decoration: none !important;
     list-style: none;
@@ -106,10 +106,10 @@
 
 .Slider a:hover{
     color: white;
-    background: rgba(35, 35, 35, .4);
-    border-bottom-color: #DDC5F9;
+    background: rgba(136, 106, 234, .4);
+    /* border-bottom-color: #DDC5F9;
     border-bottom-width: 6px;
-    border-bottom-style: groove;
+    border-bottom-style: groove; */
     transition: color .5s;
     -webkit-transition: color .5s;
 }
@@ -123,7 +123,7 @@
 }
 
 .up{
-    top:-40px;
+    top:-50px;
     position: fixed;
     z-index: 850;
     transition: ease .5s;
@@ -131,7 +131,7 @@
 }
 
 .down {
-    top:50px;
+    top:65px;
     position: fixed;
     z-index: 850;
     transition: ease .5s;
