--- a/src/UI Components/Project.css
+++ b/src/UI Components/Project.css
@@ -18,17 +18,17 @@
 	display: flex;
 	justify-content: space-evenly;
 }
-#small{
-	width: 60%;
-	border: 1px solid var(--dark-purple);
-}
 .Contributions hr{
 	width: 50%;
 	border: 1px solid var(--dark-purple);
 }
 
+.Project{
+	width: 94%;
+	margin: 0% 3%;
+}
 .Project p{
-	margin: 2vh 3vw;
+	margin: 2vh 2vw;
 }
 
 .linkContainer{
