--- a/src/UI Components/Skills.css
+++ b/src/UI Components/Skills.css
@@ -8,7 +8,7 @@
 
 .skillImages{
 	display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
         flex-wrap: wrap;
 }
@@ -16,5 +16,5 @@
 .skillImages img{
 	width: 8%;
 	height: 8%;
-	margin: 1vh 5vw;
+	margin: 1vh 5vw
 }
