--- a/src/UI Components/Home.css
+++ b/src/UI Components/Home.css
@@ -93,7 +93,7 @@
 .HomeNav {
 	position: absolute;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: center;
 	bottom: 10%;
 	width: var(--content-width);
 	left: 0;
@@ -105,6 +105,7 @@
 	font-size: calc(1vw + 12px);
 	font-weight: bold;
 	padding: 1vh 2vw;
+	margin: auto;
 	-webkit-transition : 500ms ease-out;
 	-moz-transition :  500ms ease-out;
 	-o-transition :  500ms ease-out;
