--- a/src/UI Components/Navbar.css
+++ b/src/UI Components/Navbar.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 700px) {
-    .up{ top:65px !important; transition: ease .5s !important; width: 100% !important;}
+    .up{ top:var(--main-nav-height) !important; transition: ease .5s !important; width: 100% !important;}
     
-    .down {top:65px !important; width: 100% !important;}
+    .down {top:var(--main-nav-height) !important; width: 100% !important;}
     
     .Slider{width:100%!important; transition: ease .5s !important;}
 
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 65px;
+    height: var(--main-nav-height); 
     background-image: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
     transform: translateY(-40px);
     top: 40px;
@@ -35,8 +35,8 @@
     font-weight: bold;
     color: white;
     text-decoration: none;
-    line-height: 65px;
-    height: 65px;
+    line-height: var(--main-nav-height);
+    height: var(--main-nav-height);
     padding: 0vh 1.5vw 0vh 1.5vw;
     cursor: pointer;
     list-style: none;
@@ -72,18 +72,18 @@
     align-items: center;
     flex-direction: row;
     color: white;
-    height: 50px;
+    height: var(--sub-nav-height);
     background-image: linear-gradient(to right, #434343 0%, black 75%);
     opacity: .85;
 }
 
 .Slider a{
-    height: 50px;
+    height: var(--sub-nav-height);
     padding: 0vh 2vw 0vh 2vw;
     cursor: pointer;
     font-size: calc(.8vw + 7.5px);
     font-weight: bold;
-    line-height: 50px;
+    line-height: var(--sub-nav-height);
     color: white;
     text-decoration: none !important;
     list-style: none;
@@ -108,7 +108,7 @@
 }
 
 .up{
-    top:-50px;
+    top: calc( -1 * var(--sub-nav-height));
     position: fixed;
     z-index: 850;
     transition: ease .5s;
@@ -116,7 +116,7 @@
 }
 
 .down {
-    top:65px;
+    top: var(--main-nav-height);
     position: fixed;
     z-index: 850;
     transition: ease .5s;
