--- a/src/UI Components/Project.css
+++ b/src/UI Components/Project.css
@@ -26,17 +26,16 @@
 .Project{
 	width: 94%;
 	margin: 0% 3%;
-}
-.Project p{
+} .Project p{
 	margin: 2vh 2vw;
 }
 
 .linkContainer{
 	text-align: center;
 	margin-bottom: 10px;
-}
-
-.linkContainer p {
+} .linkContainer a{
+	word-wrap: break-word !important;
+} .linkContainer p {
 	margin: 0;
 }
 
